# PINN-Jacobian-Normalization

./: LICENSE  README.md  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  main-checkpoint.py
PDE/: experiments-advanced-v5-PDE.ipynb  pinnAdvancedv5PDE.py
notebooks/: ResultsSection2.ipynb  ResultsSection3.ipynb  Toy1-SimplestODE.ipynb  Toy2-NonHomogeneous.ipynb  Toy3-NonLinear.ipynb  forward-Jacobian.ipynb  forward-RBA.ipynb  forward-Soft.ipynb  inverse-C.ipynb  pinn.py  utils.py
