[project]
name = "pinn-jn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.5",
    "markupsafe==2.1.5",
    "matplotlib>=3.10.8",
    "numpy==2.1.2",
    "scipy>=1.17.1",
    "torch==2.7.1+cu128",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
